--- a/start.ipynb
+++ b/start.ipynb
@@ -107,9 +107,7 @@
     "plt.legend()\n",
     "\n",
     "# como os dados são binários, é mais interessante tentar aplicar uma cor ao resultado\n",
-    "# o resultado abaixo ainda é influenciado pelo tamanho dos círculos\n",
-    "\n",
-    "\n"
+    "# o resultado abaixo ainda é influenciado pelo tamanho dos círculos"
    ]
   },
   {
@@ -148,9 +146,7 @@
     "# 1- ST_Slope\n",
     "# 2- ExerciseAngina\n",
     "# 3- ChestPainType\n",
-    "# 4- Oldpeak ou MaxHR\n",
-    "\n",
-    "# O banco de dados utilizados é muito pequeno para tentar treinar fetures de Sexo e Idade\n"
+    "# 4- Oldpeak ou MaxHR"
    ]
   },
   {
@@ -173,6 +169,7 @@
     "dt['RestingECG1'] = dt['RestingECG'].apply(lambda x : x+(random.randrange(0,aumento)/100))\n",
     "\n",
     "# Gerar uma matriz de confusao:\n",
+    "# combinação entre variáveis para desenhar\n",
     "All_col = ['ST_Slope1','ExerciseAngina1','ChestPainType1','Oldpeak','MaxHR']\n",
     "col = []\n",
     "for x in range(len(All_col)):\n",
@@ -186,16 +183,7 @@
     "        label='x='+c[0], title='',\n",
     "        c='HeartDisease', cmap=plt.get_cmap(\"winter\"),\n",
     "        figsize=(10,5)\n",
-    "       )\n",
-    "\n",
-    "    # desenha o label do eixo x\n",
-    "    #lt.text( max(dt[c[0]])/2 ,  min(dt[c[1]])-1 , \"Downsloping\", fontsize=12, horizontalalignment='center' )\n",
-    "    #plt.xticks(ticks=[1,2,3,4,5,], labels=[\"teste\",\"123\",\"123\",\"123\",\"abc\"])\n",
-    "    #plt.text(1,4,\"123\")\n",
-    "    #plt.legend()\n",
-    "    #print(max(c[0]))\n",
-    "    \n",
-    "    "
+    "       )"
    ]
   },
   {
@@ -230,9 +218,7 @@
     "# ExerciseAngina\n",
     "# ChestPainType\n",
     "# Como fazemos isso?\n",
-    "# Como comparar dois valores binarios?\n",
-    "\n",
-    "\n"
+    "# Como comparar dois valores binarios?"
    ]
   },
   {
@@ -248,105 +234,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a28853f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dt.plot(kind='scatter', x='ExerciseAngina', y = 'ST_Slope', alpha=0.2,label=\"indices\", c='HeartDisease', cmap=plt.get_cmap(\"jet\"),figsize=(10,10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15e35ca4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Agora ficou visível uma relação, não?!\n",
-    "dt.plot(kind='scatter', x='ExerciseAngina1', y = 'ST_Slope1', alpha=1,\n",
-    "        label=\"indices\", title='test',\n",
-    "        c='HeartDisease', cmap=plt.get_cmap(\"winter\"),\n",
-    "        figsize=(10,10)\n",
-    "       )\n",
-    " \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5c7420f",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# vamos tentar colocar mais uma variavel no jogo?\n",
-    "\"\"\"\n",
-    "    from mpl_toolkits.mplot3d import Axes3D\n",
-    "    fig = plt.figure()\n",
-    "    ax = fig.add_subplot(111, projection='3d')\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a745dd6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Relação entre \n",
-    "\n",
-    "# style = \n",
-    "dt.plot(kind='scatter', x='ExerciseAngina1', y = 'ST_Slope1', alpha=0.5,\n",
-    "        label=\"indices\", title='test',\n",
-    "        c='HeartDisease', cmap=plt.get_cmap(\"jet\"), s=30,\n",
-    "        figsize=(10,10),\n",
-    "        xlabel={'center':'test', 'labelpad':1}\n",
-    "       )\n",
-    "#print(dt.axes)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8240e86",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"dt.plot(kind='scatter', x='ExerciseAngina1', y = 'ChestPainType', alpha=0.5,\n",
-    "        label=\"indices\", title='test',\n",
-    "        c='HeartDisease', cmap=plt.get_cmap(\"jet\"), marker='^',\n",
-    "        figsize=(10,10)\n",
-    "       )\n",
-    "plt.xlabel(\"Culmen Length (mm)\",fontweight ='bold', size=14)    \n",
-    "\"\"\"\n",
-    "\n",
-    "\"\"\"\n",
-    "ST_Slope\n",
-    "ExerciseAngina\n",
-    "ChestPainType\n",
-    "Oldpeak\n",
-    "\"\"\"\n",
-    "\n",
-    "ax = dt.plot.scatter(x='ExerciseAngina1', y = 'ST_Slope1' , label=\"Group 1\", c='HeartDisease', cmap=plt.get_cmap(\"jet\"), marker='^', s=30)\n",
-    "\n",
-    "\n",
-    "\n",
-    "dt.plot.scatter(x='ExerciseAngina1', y = 'ChestPainType1', label=\"Group 2\",  c='HeartDisease', \n",
-    "                cmap=plt.get_cmap(\"winter\"), ax=ax,figsize=(15,15),s=30)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "78ce82ee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# aplicar cor na plotagem:\n",
     "dt.plot(kind='scatter', x='ExerciseAngina1', y = 'ST_Slope1', alpha=1,\n",
     "        label=\"indices\", title='test',\n",
     "        c='HeartDisease', cmap=plt.get_cmap(\"winter\"),\n",
@@ -358,21 +250,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d88efce6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "22e8305a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Por que NÃO foi considerado o sexo do indivíduo?\n",
-    "# O problema de considerar o sexo é que os dados são experimentais, portanto, \n",
-    "# a relação do banco de dados pode ser tendenciosa e não necessáriamente refletir o que acontece na natureaza"
+    "# a relação do banco de dados pode ser tendenciosa (devido ao baixo número de dados) \n",
+    "# e não necessáriamente refletir o que acontece na natureaza"
    ]
   },
   {
@@ -413,18 +297,6 @@
     "# mostra o gráfico\n",
     "plt.show()\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3cb22ad7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Que tipo de dados estou errando? \n",
-    "# falso positivos?\n",
-    "#"
    ]
   },
   {
@@ -540,14 +412,6 @@
     "# mostra  o gráfico\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16e3460b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
