testes de modelo

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d8a5f9b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -36,10 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d9e5438a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-07-22 16:56:49.260609: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-07-22 16:56:49.260633: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
@@ -50,10 +67,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "eb0f7f5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ExerciseAngina</th>\n",
+       "      <th>ChestPainType</th>\n",
+       "      <th>MaxHR</th>\n",
+       "      <th>Oldpeak</th>\n",
+       "      <th>ST_Slope</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.788732</td>\n",
+       "      <td>0.295455</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.676056</td>\n",
+       "      <td>0.409091</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.267606</td>\n",
+       "      <td>0.295455</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.338028</td>\n",
+       "      <td>0.465909</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.436620</td>\n",
+       "      <td>0.295455</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.774648</td>\n",
+       "      <td>0.295455</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.774648</td>\n",
+       "      <td>0.295455</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.577465</td>\n",
+       "      <td>0.295455</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.492958</td>\n",
+       "      <td>0.465909</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.422535</td>\n",
+       "      <td>0.295455</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.577465</td>\n",
+       "      <td>0.295455</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.274648</td>\n",
+       "      <td>0.522727</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.598592</td>\n",
+       "      <td>0.295455</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.563380</td>\n",
+       "      <td>0.409091</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.542254</td>\n",
+       "      <td>0.295455</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.633803</td>\n",
+       "      <td>0.465909</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.746479</td>\n",
+       "      <td>0.295455</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.739437</td>\n",
+       "      <td>0.295455</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.457746</td>\n",
+       "      <td>0.409091</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.704225</td>\n",
+       "      <td>0.636364</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ExerciseAngina  ChestPainType     MaxHR   Oldpeak  ST_Slope\n",
+       "0                0            0.1  0.788732  0.295455       0.0\n",
+       "1                0            0.2  0.676056  0.409091       0.1\n",
+       "2                0            0.1  0.267606  0.295455       0.0\n",
+       "3                1            0.3  0.338028  0.465909       0.1\n",
+       "4                0            0.2  0.436620  0.295455       0.0\n",
+       "5                0            0.2  0.774648  0.295455       0.0\n",
+       "6                0            0.1  0.774648  0.295455       0.0\n",
+       "7                0            0.1  0.577465  0.295455       0.0\n",
+       "8                1            0.3  0.492958  0.465909       0.1\n",
+       "9                0            0.1  0.422535  0.295455       0.0\n",
+       "10               0            0.2  0.577465  0.295455       0.0\n",
+       "11               1            0.1  0.274648  0.522727       0.1\n",
+       "12               0            0.1  0.598592  0.295455       0.0\n",
+       "13               1            0.3  0.563380  0.409091       0.1\n",
+       "14               0            0.2  0.542254  0.295455       0.0\n",
+       "15               0            0.1  0.633803  0.465909       0.1\n",
+       "16               0            0.3  0.746479  0.295455       0.1\n",
+       "17               0            0.1  0.739437  0.295455       0.0\n",
+       "18               0            0.3  0.457746  0.409091       0.1\n",
+       "19               0            0.1  0.704225  0.636364       0.1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db = pd.DataFrame()\n",
     "db[\"ExerciseAngina\"] = dt[\"ExerciseAngina\"].apply(lambda x: 1 if x == 'Y' else 0)\n",
@@ -97,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7060e2d3",
    "metadata": {},
    "outputs": [],
@@ -153,8 +392,12 @@
     "                loss='binary_crossentropy',\n",
     "                 metrics=['accuracy'])\n",
     "\n",
+    "tf.summary.trace_on(\n",
+    "    graph=True, profiler=False\n",
+    ")\n",
     "\n",
-    "model.fit(x_treino,y_treino,batch_size=128, epochs=3000,verbose=2,\n",
+    "\n",
+    "model.fit(x_treino,y_treino,batch_size=128, epochs=1000,verbose=2,\n",
     "                callbacks=[tensorboard_callback]                 \n",
     "                )\n",
     "\n",
